--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -28,14 +28,13 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:layout_weight="0.3"
+            android:layout_weight="0.2"
             android:src="@drawable/logo_amate" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="0.7"
+            android:layout_weight="0.8"
             android:orientation="vertical">
 
             <!--  Name Label -->
@@ -48,6 +47,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/nombre_usuario"
+                    android:inputType="textCapWords"
+                    android:maxLength="50" />
+            </android.support.design.widget.TextInputLayout>
+
+            <!--  Name Label -->
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/authSignupLastName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/apellido_usuario"
                     android:inputType="textCapWords"
                     android:maxLength="50" />
             </android.support.design.widget.TextInputLayout>
@@ -99,7 +112,7 @@
                 android:id="@+id/authLinkLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="10dp"
                 android:clickable="true"
                 android:gravity="center"
                 android:text="@string/tienes_cuenta"
