--- a/app/src/main/res/drawable/progressbar_states.xml
+++ b/app/src/main/res/drawable/progressbar_states.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@android:id/background">
+<item android:id="@android:id/progress">
     <shape android:shape="rectangle">
         <solid android:color="@color/colorPrimaryText"/>
-        <stroke android:width="1dip" android:color="@color/colorBlueLigth" />
+        <stroke android:width="1dip" android:color="@color/colorBlack" />
         <corners
             android:bottomLeftRadius="10dp"
             android:topLeftRadius="10dp"
@@ -15,7 +15,7 @@
 <item android:id="@android:id/progress">
     <clip>
         <shape >
-            <solid android:color="@color/colorBlueLigth"/>
+            <solid android:color="@color/colorBlue"/>
             <corners
                 android:bottomLeftRadius="10dp"
                 android:topLeftRadius="10dp"
