--- a/app/src/main/res/drawable/rounded_text_circle.xml
+++ b/app/src/main/res/drawable/rounded_text_circle.xml
@@ -3,7 +3,7 @@
     <item>
         <shape
             android:shape="oval" >
-            <stroke android:width="1dip" android:color="@color/colorBlueLigth" />
+            <stroke android:width="1dip" android:color="@color/colorBlack" />
             <solid android:color="@color/colorPrimaryText"/>
         </shape>
     </item>
