--- a/app/src/main/res/layout/fragment_gifts.xml
+++ b/app/src/main/res/layout/fragment_gifts.xml
@@ -84,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.1"
-            android:background="@color/colorBlueLigth"
+            android:background="@color/colorBlue"
             android:drawableStart="@drawable/ic_gift_white_36dp"
             android:paddingStart="10dp"
             android:text="@string/get_to_gift" />
