--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="colorBlack">#080808</color>
     <color name="colorGray">#CCCCCC</color>
     <color name="colorFacebook">#3b5998</color>
-    <color name="colorBlueLigth">#0da4a6</color>
-    <color name="colorBlueLigthligh">#5bd6d7</color>
+    <color name="colorBlue">#0da4a6</color>
+    <color name="colorBlueLigth">#5bd6d7</color>
     <color name="colorBlueLigthTransparence">#700da4a6</color>
+    <color name="colorWarning">#ffb300</color>
 </resources>
