--- a/app/src/main/res/drawable/rounded_blue_light.xml
+++ b/app/src/main/res/drawable/rounded_blue_light.xml
@@ -3,7 +3,7 @@
     <item>
         <shape
             android:shape="rectangle" android:padding="50dp">
-            <solid android:color="@color/colorBlueLigth"/>
+            <solid android:color="#0da4a6"/>
             <corners
                 android:bottomRightRadius="26dp"
                 android:bottomLeftRadius="26dp"
