--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -20,108 +20,169 @@
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:paddingTop="56dp"
+        android:paddingTop="25dp"
         android:weightSum="1">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="24dp"
             android:layout_weight="0.2"
             android:src="@drawable/logo_amate" />
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.8"
-            android:orientation="vertical">
+            android:layout_weight="0.8">
 
-            <!--  Name Label -->
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/authSignupName"
+                <!--  Name Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/authSignupName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/nombre_usuario"
+                        android:inputType="textCapWords"
+                        android:maxLength="50" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!--  Name Label -->
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/authSignupLastName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/apellido_usuario"
+                        android:inputType="textCapWords"
+                        android:maxLength="50" />
+                </android.support.design.widget.TextInputLayout>
+
+                <!-- Email Label -->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/nombre_usuario"
-                    android:inputType="textCapWords"
-                    android:maxLength="50" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginTop="8dp">
 
-            <!--  Name Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/authSignupEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/email"
+                        android:inputType="textEmailAddress"
+                        android:maxLength="50" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/authSignupLastName"
+                <!-- Password Label -->
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/apellido_usuario"
-                    android:inputType="textCapWords"
-                    android:maxLength="50" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginTop="8dp"
+                    app:passwordToggleContentDescription="@string/password_enable"
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/colorAccent">
 
-            <!-- Email Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
+                    <EditText
+                        android:id="@+id/authSignupPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        android:maxLength="30" />
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/authSignupEmail"
+                <!--terminos y condiciones-->
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="50" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
 
-            <!-- Password Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:passwordToggleContentDescription="@string/password_enable"
-                app:passwordToggleEnabled="true"
-                app:passwordToggleTint="@color/colorAccent">
+                    <CheckBox
+                        android:id="@+id/link_check_terms"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-                <EditText
-                    android:id="@+id/authSignupPassword"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/accept"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/link_termsCondition"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:maxLength="30" />
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal">
 
-            <!-- Signup Button -->
-            <Button
-                android:id="@+id/authBtnSignUp"
-                style="@style/BtnPpal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:padding="12dp"
-                android:text="@string/crear_cuenta" />
+                    <CheckBox
+                        android:id="@+id/link_check_privacy"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/authLinkLogin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:clickable="true"
-                android:gravity="center"
-                android:text="@string/tienes_cuenta"
-                android:textColor="@color/colorPrimary"
-                android:textSize="16sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/accept"
+                        android:textSize="18sp" />
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/link_privacy_policy"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="5dp"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:textSize="18sp" />
 
+                </LinearLayout>
+
+                <!-- Signup Button -->
+                <Button
+                    android:id="@+id/authBtnSignUp"
+                    style="@style/BtnPpal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:padding="12dp"
+                    android:text="@string/crear_cuenta" />
+
+                <TextView
+                    android:id="@+id/authLinkLogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="@string/tienes_cuenta"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
-
 
 </FrameLayout>
