--- a/app/src/main/res/layout/item_answer_secondary_question_cervix.xml
+++ b/app/src/main/res/layout/item_answer_secondary_question_cervix.xml
@@ -15,7 +15,8 @@
         android:background="@drawable/rounded_blue_light"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textAllCaps="false"/>
 
     <TextView
         android:id="@+id/questionAnswersPoints"
