--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -75,8 +75,9 @@
                 android:id="@+id/activity_questions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
+                android:layout_marginTop="40dp"
                 >
 
                 <TextView
@@ -106,7 +107,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
                         android:layout_margin="10dp"
-                        android:padding="10dp" />
+                        android:padding="10dp"
+                        android:textAllCaps="false"/>
 
                     <TextView
                         android:id="@+id/mainQuestionTxtTrue"
@@ -121,7 +123,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
                         android:layout_margin="10dp"
-                        android:padding="10dp" />
+                        android:padding="10dp"
+                        android:textAllCaps="false"/>
 
                     <TextView
                         android:id="@+id/mainQuestionTxtFalse"
