--- a/app/src/main/res/layout/fragment_gifts.xml
+++ b/app/src/main/res/layout/fragment_gifts.xml
@@ -4,15 +4,6 @@
     android:layout_height="match_parent"
     tools:context="org.pfccap.education.presentation.main.ui.fragments.GiftsFragment">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:indeterminate="true"
-        android:visibility="invisible" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -89,14 +80,25 @@
 
         <Button
             android:id="@+id/mainGiftBtnGetGift"
-            style="@style/BtnMain"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="0.1"
             android:background="@color/colorBlue"
             android:drawableStart="@drawable/ic_gift_white_36dp"
-            android:paddingStart="10dp"
-            android:text="@string/get_to_gift" />
+            android:paddingStart="20dp"
+            android:text="@string/get_to_gift"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="23sp" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:indeterminate="true"
+        android:visibility="invisible" />
 </FrameLayout>
