--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -181,6 +181,17 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
 
+                <TextView
+                    android:id="@+id/link_create_gmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="@string/create_gmail_acount"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
