--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,10 +64,11 @@
     </style>
 
     <style name="BtnMain" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textSize">20sp</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:textSize">23sp</item>
+        <item name="android:paddingStart">30dp</item>
         <item name="android:layout_margin">0dp</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="BtnIntro" parent="BtnMain">
