--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,9 +4,9 @@
     android:id="@+id/activity_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="org.pfccap.education.presentation.main.ui.activities.ProfileActivity"
-    android:fitsSystemWindows="true">
+    tools:context="org.pfccap.education.presentation.main.ui.activities.ProfileActivity">
 
     <include layout="@layout/toolbar" />
 
@@ -58,8 +58,8 @@
                     android:layout_weight="0.7"
                     android:text=""
                     android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                    android:textSize="15sp"
-                    android:textColor="@color/colorPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -76,10 +76,10 @@
                         android:id="@+id/mainProfileTxtName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNM "
                         android:hint="@string/nombre_usuario"
                         android:inputType="textPersonName"
-                        android:maxLength="35"
-                        android:digits="qwertzuiopasdfghjklyxcvbnm "/>
+                        android:maxLength="35" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -91,44 +91,47 @@
                         android:id="@+id/mainProfileTxtLastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:digits="qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLÑZXCVBNM "
                         android:hint="@string/apellido_usuario"
                         android:inputType="textPersonName"
-                        android:maxLength="35"
-                        android:digits="qwertzuiopasdfghjklyxcvbnm "/>
+                        android:maxLength="35" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="1"
                     android:layout_marginTop="8dp">
 
-                    <EditText
-                        android:id="@+id/mainProfileTxtBirth"
-                        android:layout_width="match_parent"
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="false"
-                        android:hint="@string/birth"
-                        android:inputType="date"
-                        android:text="@string/selecciona_fecha_nac" />
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_weight="0.8">
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp">
+                        <EditText
+                            android:id="@+id/mainProfileTxtBirth"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="false"
+                            android:hint="@string/birth"
+                            android:inputType="date"
+                            android:text="@string/selecciona_fecha_nac" />
+                    </android.support.design.widget.TextInputLayout>
 
-                    <EditText
+                    <TextView
                         android:id="@+id/mainProfileTxtAge"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:focusable="false"
+                        android:layout_weight="0.2"
+                        android:layout_marginTop="8dp"
                         android:hint="@string/age"
-                        android:inputType="number"
-                        android:maxLength="2"/>
-
-                </android.support.design.widget.TextInputLayout>
+                        android:textSize="17sp"
+                        android:layout_gravity="bottom"
+                        android:gravity="center"/>
+                </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -141,7 +144,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/phone"
                         android:inputType="phone"
-                        android:maxLength="15"/>
+                        android:maxLength="15" />
                 </android.support.design.widget.TextInputLayout>
 
                 <LinearLayout
@@ -154,7 +157,6 @@
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_weight="0.9">
 
                         <EditText
@@ -163,24 +165,24 @@
                             android:layout_height="wrap_content"
                             android:hint="@string/address"
                             android:inputType="textPostalAddress"
-                            android:maxLength="80"/>
+                            android:maxLength="80" />
                     </android.support.design.widget.TextInputLayout>
 
                     <EditText
                         android:id="@+id/mainProfileTxtLongitude"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <EditText
                         android:id="@+id/mainProfileTxtLatitude"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <ImageButton
                         android:id="@+id/btnmaps"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="0.1"
@@ -203,7 +205,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/neighborhood"
                         android:inputType="text"
-                        android:maxLength="50"/>
+                        android:maxLength="50" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -217,7 +219,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/person_height"
                         android:inputType="numberDecimal"
-                        android:maxLength="4"/>
+                        android:maxLength="4" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -231,7 +233,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/person_weight"
                         android:inputType="numberDecimal"
-                        android:maxLength="5"/>
+                        android:maxLength="5" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -245,7 +247,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/person_childs"
                         android:inputType="number"
-                        android:maxLength="2"/>
+                        android:maxLength="2" />
                 </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
