--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="colorBlueLigth">#5bd6d7</color>
     <color name="colorBlueLigthTransparence">#700da4a6</color>
     <color name="colorWarning">#ffb300</color>
+    <color name="answerColorWarning">#ffa726</color>
+    <color name="answerColorRight">#66bb6a</color>
+    <color name="answerColorFail">#f50057</color>
 </resources>
