ajustes validaciones y finalización de la integración del servicio para las citas

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -2,7 +2,7 @@
 <defaultsMap>
     <entry>
         <key>serviceAppointment</key>
-        <value>https://us-central1-fptc-test.cloudfunctions.net/</value>
+        <value>https://us-central1-fptc-dev.cloudfunctions.net/</value>
     </entry>
     <entry>
         <key>urlTermCondition</key>
