--- a/app/src/main/res/layout/message_get_gift.xml
+++ b/app/src/main/res/layout/message_get_gift.xml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="10dp"
-    android:layout_marginStart="10dp">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+    android:layout_margin="20dp"
+    android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,7 +54,7 @@
                     android:id="@+id/gitf_btn_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_txt_primary"
+                    android:background="@drawable/rounded_button"
                     android:layout_margin="10dp"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="18sp"
@@ -98,5 +93,4 @@
                 android:text="@string/warning_git" />
 
         </LinearLayout>
-    </ScrollView>
-</FrameLayout>
+</ScrollView>
