--- a/app/src/main/res/layout/message_get_gift.xml
+++ b/app/src/main/res/layout/message_get_gift.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp">
-
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
+        android:layout_gravity="center"
         android:background="@drawable/logo_amate"
         android:contentDescription="@string/app_name" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:scrollbars="none">
 
         <LinearLayout
@@ -25,11 +27,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/congratulation"
                 android:textColor="@color/colorPrimary"
-                android:textSize="28sp"/>
+                android:textSize="28sp" />
 
             <TextView
                 android:id="@+id/gift_msg_intro"
@@ -55,8 +56,8 @@
                 android:id="@+id/lyt_botton_gift"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <Button
@@ -103,11 +104,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:gravity="center"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:text="@string/points_and_thanks_gift"
-                android:textSize="20sp"
-                android:gravity="center" />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/gitf_btn_finish"
@@ -125,4 +126,5 @@
 
         </LinearLayout>
     </ScrollView>
-</FrameLayout>
+
+</LinearLayout>
