--- a/app/src/main/res/layout/message_get_gift.xml
+++ b/app/src/main/res/layout/message_get_gift.xml
@@ -5,14 +5,8 @@
     android:layout_margin="10dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/logo_amate"
-        android:contentDescription="@string/app_name" />
-
     <ScrollView
+        android:id="@+id/scrollMessageGift"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -123,6 +117,14 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/logo_amate"
+                android:contentDescription="@string/app_name" />
 
         </LinearLayout>
     </ScrollView>
