--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -13,7 +13,8 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/margin_horizontal_questions"
         android:paddingRight="@dimen/margin_horizontal_questions"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:weightSum="1">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -44,7 +45,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="15dp">
 
             <TextView
                 android:id="@+id/textView"
@@ -69,7 +71,9 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="0.95"
+            android:layout_marginBottom="20dp">
 
             <LinearLayout
                 android:id="@+id/activity_questions"
@@ -77,8 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:orientation="vertical"
-                android:layout_marginTop="40dp"
-                >
+                android:descendantFocusability="blocksDescendants">
 
                 <TextView
                     android:id="@+id/mainQuestionTxtQuestion"
@@ -88,7 +91,8 @@
                     android:gravity="center"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="21sp"
-                    android:padding="20dp"/>
+                    android:padding="20dp"
+                    android:focusable="false"/>
 
 
                 <LinearLayout
@@ -114,7 +118,8 @@
                         android:id="@+id/mainQuestionTxtTrue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        android:focusable="false"/>
 
                     <Button
                         android:id="@+id/mainQuestionBtnFalse"
@@ -130,7 +135,8 @@
                         android:id="@+id/mainQuestionTxtFalse"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        android:focusable="false"/>
                 </LinearLayout>
 
 
@@ -151,7 +157,8 @@
                     android:padding="20dp"
                     android:textColor="@color/colorPrimaryText"
                     android:textSize="18sp"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:focusable="false"/>
 
             </LinearLayout>
         </ScrollView>
