api maps enable

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -15,9 +15,9 @@
             android:title="@string/gift"
             android:icon="@drawable/ic_gift_black_48dp"/>
 
-        <item
+        <!--<item
             android:id="@+id/item_drawer_invite"
             android:title="@string/invite"
-            android:icon="@drawable/ic_compartir_nav"/>
+            android:icon="@drawable/ic_compartir_nav"/>-->
     </group>
 </menu>
