--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -56,8 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                app:passwordToggleEnabled="true"
                 app:passwordToggleContentDescription="@string/password_enable"
+                app:passwordToggleEnabled="true"
                 app:passwordToggleTint="@color/colorAccent">
 
                 <EditText
@@ -111,5 +111,11 @@
 
     </LinearLayout>
 
-
+    <ImageView
+        android:id="@+id/paweredbyleadis"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="5dp"
+        android:src="@drawable/paweredbyleadis" />
 </FrameLayout>
